tests/error/type_errors/and_not_bool_right.err
Error: Not truthy (at $FILE:12:17)
   | 
10 | @guppy(module)
11 | def foo(x: bool, y: NonBool) -> bool:
12 |     return x and y
   |                  ^ Expression of type `NonBool` is not truthy

Help: Implement missing method: `__bool__: NonBool -> bool`

Guppy compilation failed due to 1 previous error
